Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-6525

Should not mark empty item bodies as compressed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 2.0-beta
    • None
    • storage-engine
    • Security Level: Public
    • None

    Description

      This results in CouchDB attempting to decompress nothing and blowing up:

      initial call: xdc_vbucket_rep:init/1
      pid: <0.17073.1>
      registered_name: []
      exception exit: badmatch,{error,corrupted_data,
      [

      {couch_compress,decompress,1}

      ,

      {couch_doc,with_uncompressed_body,1}

      ,

      {couch_doc,to_json_base64,1}

      ,

      {xdc_vbucket_rep_worker,maybe_flush_docs,3}

      ,

      {lists,foldl,3}

      ,

      {xdc_vbucket_rep_worker,local_process_batch,5}

      ,

      {xdc_vbucket_rep_worker,queue_fetch_loop,4}

      ]}
      in function gen_server:terminate/6
      ancestors: [<0.9075.0>,<0.9071.0>,xdc_replication_sup,ns_server_sup,
      ns_server_cluster_sup,<0.60.0>]
      messages: []
      links: [<0.17403.1>,<0.17407.1>,<0.17410.1>,<0.17406.1>,<0.17401.1>,
      <0.9075.0>]
      dictionary: []
      trap_exit: true

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aaron Aaron Miller (Inactive)
            aaron Aaron Miller (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty