MB-6525 Don't mark empty bodies for compression

Change-Id: I5385637fd061db17432d2b3e0e52ba36dd9cbe3a
Reviewed-on: http://review.couchbase.org/20543
Reviewed-by: Ketaki Gangal <ketakigangal@gmail.com>
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Reviewed-by: Damien Katz <damien@couchbase.com>
Reviewed-by: Farshid Ghods <farshid@couchbase.com>
Tested-by: Farshid Ghods <farshid@couchbase.com>